Adds "cacheable" declaration to blocks in layout to prevent caching on dynamic pages

--- a/view/frontend/layout/social_accounts_index.xml
+++ b/view/frontend/layout/social_accounts_index.xml
@@ -12,6 +12,6 @@
     </referenceBlock>
 
     <referenceContainer name="content">
-        <block class="LoganStellway\Social\Block\Customer" name="lssocial_manage_accounts" template="LoganStellway_Social::customer/accounts.phtml"/>
+        <block class="LoganStellway\Social\Block\Customer" name="lssocial_manage_accounts" template="LoganStellway_Social::customer/accounts.phtml" cacheable="false"/>
     </referenceContainer>
 </page>
